--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <div id="top">
     <img src="image/logo_noir.png" alt="Logo" class="logo">
-    <h1>RESOUD CE REBUS POUR ACCEDER A UN INDICE :</h1>
+    <h1>RÉSOUD CE RÉBUS POUR ACCÉDER À UN INDICE :</h1>
     <img src="image/rébus.png" alt="Rébus" class="rebus">
     </div>
 
     <div id="mid">
-        <h2>POUR TE FELICITER VOICI UN AUTRE INDICE, <br> MAIS CHUT NE LE DIS A PERSONNE !</h2>
+        <h2>POUR TE FÉLICITER VOICI UN AUTRE INDICE, <br> MAIS CHUT NE LE DIS À PERSONNE !</h2>
         <img src="image/etoile.png" alt="L'étoile 7">
     </div>
 </body>
